Fixed inline code wrapping, previous fix did not cover full issue

--- a/src/styles/components/_syntax-highlighter.scss
+++ b/src/styles/components/_syntax-highlighter.scss
@@ -106,10 +106,12 @@ pre > code.diff-highlight .token.inserted:not(.prefix) {
             display: inline-block;
             position: relative;
             vertical-align: middle;
-            white-space: pre-wrap;
+            white-space: normal;
+            word-wrap: break-word;
+            max-width: 100%;
 
             & * {
-                white-space: pre-wrap;
+                white-space: normal;
             }
         }
 
